# fonds-relations

./: .gitignore  README.md  clear_and_recreate_db.sql  clear_elasticsearch_index.sh  create.ini  create_default_users.py  create_room_table.sql  db_backup.dump  deploy.sh  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  er.name  fix_missing_case_fields.py  h origin main  migrate_data.py  migrate_data_new.py  migration_log.txt  migration_log_detailed.txt  migration_log_detailed2.txt  migration_log_fixed.txt  migration_updated.txt  next.config.ts  package-lock.json  package.json  requirements.txt  reset_database.sh  tatus  test_api.py  test_case.json  token.json
backend/: .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.test  README.md  alembic.ini  backup_start.sh  clear_database.py  clear_elasticsearch.py  create_test_case.py  deploy.sh  docker-compose.yml  fix_case_data.py  fonds-backend.service  fund_mapping.json  generate_secret.py  generate_test_data.py  index_players.py  init_database.py  main.py  output.json  player_mapping.json  pyproject.toml  pytest.ini  requirements.txt  reset_database.sh  run_check_players.bat  run_debug_nicknames.bat  run_import_cases.bat  run_import_funds.bat  run_import_players.bat  run_test_player_api.bat  run_tests.sh  setup.py  start.sh  test_search.py  test_uuid.py  wait_for_services.py
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 001_initial.py  add_health_notes_field.py  create_rooms_table.py  initial_migration.py  update_models_for_data_structure.py
backend/app/: create_test_cases.py  database.py  main.py  utils.py
backend/app/api/: deps.py
backend/app/core/: config.py  elasticsearch.py  health.py  security.py  version.py
backend/app/crud/: __init__.py  (+9 more)
backend/fonds_relations.egg-info/: PKG-INFO  SOURCES.txt
backend/migrations/: rename_fund_to_funds.sql
backend/scripts/: check_player_nicknames.py  create_cases_sample.py  create_db.py  debug_player_nicknames.py  grant_privileges.py  import_cases.py  import_funds.py  import_funds_api.py  import_players_api.py  init_db.py  install_extensions.py  test_db_connection.py  test_db_direct.py  test_player_api.py
backend/tests/: conftest.py  test_persons.py
(+215 files in other folders)
